--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -3,14 +3,23 @@
 @use "./themes/light.scss";
 @use "./variables/global.scss";
 
-.app {
-    background: var(--main-bg);
+body {
     color: var(--main-bg-inv);
     font: var(--font-s);
+    background: var(--main-bg);
+}
+
+.app {
+    display: flex;
+    flex-direction: column;
     min-height: 100svh;
 }
 
-.img{
+.main {
+    flex-grow: 1;
+}
+
+.img {
     width: 100%;
     height: 100%;
     object-fit: cover;
