--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -1,7 +1,9 @@
-.app.light {
+.light_theme {
     --main-bg: #fff;
     --main-bg-light: #f7f7f8;
     --main-bg-inv: #1a1a1a;
     --icon-color: rgb(195, 195, 198);
+    --color-gray: rgb(151, 151, 155);
     --purple-color: rgb(101, 52, 255);
+    --loading-gradient: linear-gradient(90deg, rgb(217, 217, 217), rgb(236, 236, 236) 100%);
 }
