user page && testing

--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -4,6 +4,7 @@
     --main-bg-inv: #fff;
     --icon-color: rgb(67, 67, 67);
     --color-gray: rgb(151, 151, 155);
+    --color-gray-secondary: rgb(85, 85, 92);
     --purple-color: rgb(101, 52, 255);
     --loading-gradient: linear-gradient(90deg, rgb(38, 38, 38), rgb(48, 48, 48) 100%);
 }
