--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -4,6 +4,7 @@
     --main-bg-inv: #1a1a1a;
     --icon-color: rgb(195, 195, 198);
     --color-gray: rgb(151, 151, 155);
+    --color-gray-secondary: rgb(85, 85, 92);
     --purple-color: rgb(101, 52, 255);
     --loading-gradient: linear-gradient(90deg, rgb(217, 217, 217), rgb(236, 236, 236) 100%);
 }
