--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -11,6 +11,7 @@
 
     --font-weight-title: 700;
 
+    --line-height-smallest: calc(var(--font-size-xs) + 10px);
     --line-height-xs: calc(var(--font-size-xs) + 10px);
     --line-height-s: calc(var(--font-size-s) + 10px);
     --line-height-base: calc(var(--font-size-base) + 10px);
@@ -18,6 +19,7 @@
     --line-height-xl: calc(var(--font-size-xl) + 10px);
     --line-height-2xl: calc(var(--font-size-2xl) + 10px);
 
+    --font-smallest: var(--font-size-smallest) / var(--line-height-smallest) var(--main-ff);
     --font-xs: var(--font-size-xs) / var(--line-height-xs) var(--main-ff);
     --font-s: var(--font-size-s) / var(--line-height-s) var(--main-ff);
     --font-base: var(--font-size-base) / var(--line-height-base) var(--main-ff);
