sort functions && ui

--- a/src/features/Search/ui/Search.module.scss
+++ b/src/features/Search/ui/Search.module.scss
@@ -22,3 +22,12 @@
 .active {
     fill: var(--main-bg-inv);
 }
+
+.modal {
+    max-width: 380px;
+    padding: 21px 16px;
+}
+
+.sortBtnActive {
+    fill: var(--purple-color) !important;
+}
