--- a/src/shared/ui/Modal/Modal.module.scss
+++ b/src/shared/ui/Modal/Modal.module.scss
@@ -2,17 +2,31 @@
     position: fixed;
     z-index: var(--modalBg-zIndex);
     inset: 0;
-    backdrop-filter: blur(10px);
     display: flex;
     justify-content: center;
     align-items: center;
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    transition: var(--std-transition);
+    background-color: var(--color-blackAlpha);
+}
+
+.modalBgActive {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
 }
 
 .modal {
-    max-width: 60%;
+    translate: 0 -10vh;
     width: 100%;
-    padding: var(--std-padding);
-    background: var(--main-bg-inv);
-    color: var(--main-bg);
+    background: var(--main-bg);
+    color: var(--main-bg-inv);
     border-radius: var(--std-Radius);
+    transition: .5s;
+}
+
+.modalActive {
+    translate: 0 0;
 }
