i18n translation && cache logic && tests

--- a/src/app/styles/normalize.scss
+++ b/src/app/styles/normalize.scss
@@ -21,6 +21,8 @@ button {
     border: none;
     outline: 1px solid transparent;
     width: 100%;
+    background-color: transparent;
+    cursor: pointer;
 }
 
 input[type="search"]::-webkit-search-decoration,
