--- a/src/entities/Users/ui/Users.module.scss
+++ b/src/entities/Users/ui/Users.module.scss
@@ -1,4 +1,22 @@
 .user {
 }
 
+.yearBorder {
+    position: relative;
+    margin: 30px 24px;
+    width: 100%;
+    height: 1px;
+    background-color: var(--icon-color);
+}
 
+.year {
+    width: 160px;
+    position: absolute;
+    top: -10px;
+    left: 50%;
+    font: 500 var(--font-s);
+    translate: -50% 0;
+    color: var(--icon-color);
+    background: var(--main-bg);
+    text-align: center;
+}
