--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -36,7 +36,7 @@
 
 .toggleTheme {
     position: relative;
-    max-width: 60px;
+    width: 60px;
     padding: 0;
     height: calc(var(--toggleBtnSlider-size) + 10px);
     border-radius: var(--std-Radius);
