--- a/src/shared/ui/ListUserCard/ListUserCard.module.scss
+++ b/src/shared/ui/ListUserCard/ListUserCard.module.scss
@@ -1,3 +1,14 @@
+.user {
+    padding: 0 7px;
+    transition: var(--std-transition);
+    border-radius: var(--std-Radius);
+    &:hover {
+        color: #fff;
+        background: var(--purple-color);
+        box-shadow: var(--std-shadow);
+    }
+}
+
 .userInner {
     display: flex;
     align-items: center;
@@ -22,6 +33,14 @@
     height: 84px;
     padding: 6px 16px 6px 0;
     img {
+        display: flex;
         border-radius: 50%;
     }
+}
+
+.avatarNotFound {
+    border-radius: 50%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 }
