--- a/src/widgets/Header/NetworkStatusPreloader/NetworkStatusPreloader.module.scss
+++ b/src/widgets/Header/NetworkStatusPreloader/NetworkStatusPreloader.module.scss
@@ -5,7 +5,6 @@
     right: -100vh;
     left: -100vh;
     bottom: 0;
-    color: #fff;
     transition: var(--std-transition);
     pointer-events: none;
     opacity: 0;
@@ -15,6 +14,7 @@
     position: absolute;
     left: 0;
     top: 44px;
+    color: var(--color-errorText);
 }
 
 .online,
