--- a/src/widgets/Header/ui/Header.module.scss
+++ b/src/widgets/Header/ui/Header.module.scss
@@ -27,6 +27,10 @@
     font: var(--font-weight-title) var(--font-2xl);
 }
 
+.errorTitle {
+    color: var(--color-errorText);
+}
+
 .headerSearch {
     margin-bottom: 8px;
 }
