--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -28,5 +28,5 @@ body {
 .container {
     max-width: 1280px;
     margin: 0 auto;
-    padding: 0 16px;
+    padding: 0 var(--container-padding);
 }
