--- a/src/shared/ui/ListUserCard/ListUserCard.module.scss
+++ b/src/shared/ui/ListUserCard/ListUserCard.module.scss
@@ -34,12 +34,12 @@
     padding: 6px 16px 6px 0;
     img {
         display: flex;
-        border-radius: 50%;
+        border-radius: var(--avatar-Radius);
     }
 }
 
 .avatarNotFound {
-    border-radius: 50%;
+    border-radius: var(--avatar-Radius);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
