--- a/src/widgets/ErrorPage/ui/ErrorPage.module.scss
+++ b/src/widgets/ErrorPage/ui/ErrorPage.module.scss
@@ -11,5 +11,14 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 30px;
+    gap: 20px;
+}
+.errorText {
+    text-align: center;
+}
+
+@media (width < 500px) {
+    .errorText {
+        max-width: 300px;
+    }
 }
