--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -1,4 +1,68 @@
 :root {
+    @font-face {
+        font-family: "Montserrat";
+        src: url(../fonts/Montserrat-Black.woff2);
+        font-weight: 900;
+        font-style: normal;
+        font-display: swap;
+    }
+    @font-face {
+        font-family: "Montserrat";
+        src: url(../fonts/Montserrat-ExtraBold.woff2);
+        font-weight: 800;
+        font-style: normal;
+        font-display: swap;
+    }
+    @font-face {
+        font-family: "Montserrat";
+        src: url(../fonts/Montserrat-Bold.woff2);
+        font-weight: 700;
+        font-style: normal;
+        font-display: swap;
+    }
+    @font-face {
+        font-family: "Montserrat";
+        src: url(../fonts/Montserrat-SemiBold.woff2);
+        font-weight: 600;
+        font-style: normal;
+        font-display: swap;
+    }
+    @font-face {
+        font-family: "Montserrat";
+        src: url(../fonts/Montserrat-Medium.woff2);
+        font-weight: 500;
+        font-style: normal;
+        font-display: swap;
+    }
+    @font-face {
+        font-family: "Montserrat";
+        src: url(../fonts/Montserrat-Regular.woff2);
+        font-weight: 400;
+        font-style: normal;
+        font-display: swap;
+    }
+    @font-face {
+        font-family: "Montserrat";
+        src: url(../fonts/Montserrat-Light.woff2);
+        font-weight: 300;
+        font-style: normal;
+        font-display: swap;
+    }
+    @font-face {
+        font-family: "Montserrat";
+        src: url(../fonts/Montserrat-ExtraLight.woff2);
+        font-weight: 200;
+        font-style: normal;
+        font-display: swap;
+    }
+    @font-face {
+        font-family: "Montserrat";
+        src: url(../fonts/Montserrat-Thin.woff2);
+        font-weight: 100;
+        font-style: normal;
+        font-display: swap;
+    }
+
     //fonts
     --main-ff: "Inter", "Montserrat", sans-serif;
     --font-size-smallest: 13px;
